samples/_failures_safe/1761798306_0e7c7f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6ad0403.c: In function ‘main’:
./samples/SAFE/__tmp_d6ad0403.c:157:17: error: expected ‘;’ at end of input
  157 |             mat1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_d6ad0403.c:157:13: error: expected declaration or statement at end of input
  157 |             mat1
      |             ^~~~
./samples/SAFE/__tmp_d6ad0403.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d6ad0403.c:157:13: error: expected declaration or statement at end of input
